--- a/frontend/src/css/Donate.css
+++ b/frontend/src/css/Donate.css
@@ -3,28 +3,27 @@
 * {
   font-family: "Nunito", sans-serif;
 }
-.bodyy{
+.bodyy {
   margin: 0;
   border: 0;
   width: 100vw;
-  
 }
-.donateeapp .bodyy{
-  background: #48B0DF;
+.donateeapp .bodyy {
+  background: #48b0df;
   padding: 0.1px;
 }
 
-.requestapp .bodyy{
-  background: #48B0DF;
+.requestapp .bodyy {
+  background: #48b0df;
   padding: 0.1px;
 }
 
-.donate_instru img{
+.donate_instru img {
   height: 10rem;
   float: right;
   border-radius: 1rem;
 }
-.donate_instru{
+.donate_instru {
   box-shadow: 2px 2px 9px rgb(199, 199, 199);
   width: 80vw;
   margin: auto;
@@ -36,15 +35,14 @@
   margin-top: 2rem;
   background: white;
 }
-.donate_content{
-  
-    margin-left: 3rem;
+.donate_content {
+  margin-left: 3rem;
 }
 
-.donate_content img{
-  width:  15vw;
+.donate_content img {
+  width: 15vw;
   position: relative;
-  
+
   right: 0;
 }
 .donate {
@@ -52,37 +50,31 @@
   margin: auto;
   display: flex;
   justify-content: center;
-  
-  background: #F5F7F7;
-  
 
+  background: #d5f0ff;
 }
 
-
-.donateForm select{
+.donateForm select {
   width: 100%;
 }
 
-.donate ul{
+.donate ul {
   width: max-content;
 }
 
-.points{
+.points {
   text-align: left;
 }
-.donate #donui{
+.donate #donui {
   opacity: 0.8;
- 
-  
 }
 
-#dcurve{
+#dcurve {
   transform: rotate(270deg);
   position: absolute;
   right: 0;
   width: 30vw;
   opacity: 0.1;
-
 }
 .donateForm {
   text-align: center;
@@ -93,22 +85,18 @@
   width: 25vw;
   height: 30rem;
   position: relative;
- 
+  border-radius: 1rem;
   min-width: 22rem;
   margin-top: 2rem;
 }
 
 .loginForm2 {
-  
   background-color: #ffffff;
   padding: 20px;
   margin-top: 5px;
   border: 1px solid rgb(129, 121, 121);
   border-radius: 0.1rem;
-  
 }
-
-
 
 #donate-btn {
   font-size: 1rem;
@@ -121,21 +109,23 @@
   font-weight: bold;
   padding: 5px 10px;
   cursor: pointer;
-
 }
 
 .button-53 {
   background-color: #b7ffe7;
-  border: 0 solid #E5E7EB;
+  border-radius: 1rem;
+  border: 0 solid #e5e7eb;
   box-sizing: border-box;
   color: #000000;
   display: flex;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 700;
   justify-content: center;
   line-height: 1.75rem;
-  padding: .75rem 1.65rem;
+  padding: 0.75rem 1.65rem;
   position: relative;
   text-align: center;
   text-decoration: none #000000 solid;
@@ -143,7 +133,7 @@
   width: 60%;
   max-width: 460px;
   position: relative;
-  cursor: pointer; 
+  cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -151,9 +141,8 @@
   margin: auto;
   margin-top: 2rem;
 }
-.button-53:hover{
+.button-53:hover {
   width: 65%;
-
 }
 
 .button-53:focus {
@@ -161,7 +150,6 @@
 }
 
 .button-53:after {
- 
 }
 
 .button-53:hover:after {
@@ -169,7 +157,7 @@
   left: 2px;
 }
 
-.suggestions{
+.suggestions {
   position: relative;
   z-index: 24;
   margin-top: 3rem;
@@ -180,32 +168,30 @@
   border-radius: 0.5rem;
 }
 
-.suggestions.active{
+.suggestions.active {
   display: none;
-
 }
-.suggestions.false{
+.suggestions.false {
   animation-name: wid;
   animation-duration: 3s;
   animation-fill-mode: forwards;
-  
 }
 
-.donateback{
+.donateback {
   border-radius: 1rem;
   color: white;
   margin-left: 1rem;
   height: 34rem;
   width: 15rem;
-  background: #48B0DF;
+  background: #48b0df;
   margin-top: 2rem;
 }
 
-.donateback h1{
+.donateback h1 {
   margin-top: 10rem;
 }
-.suggestions.false ul h2{
-  animation-name:pAnimation;
+.suggestions.false ul h2 {
+  animation-name: pAnimation;
   animation-fill-mode: forwards;
   visibility: hidden;
   animation-duration: 1s;
@@ -215,28 +201,21 @@
   text-align: center;
   height: max-content;
   margin: auto;
-
-
 }
-.suggestions.false ul h3{
+.suggestions.false ul h3 {
   visibility: hidden;
-  animation-name:pAnimation;
+  animation-name: pAnimation;
   animation-fill-mode: forwards;
   visibility: hidden;
   animation-duration: 1.5s;
-  opacity: 0; 
+  opacity: 0;
   font-size: 1.2rem;
-  text-align:left;
-  
- 
-
+  text-align: left;
 }
-input{
-  
+input {
 }
 
 .donate .donateForm input:focus {
-
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
@@ -247,19 +226,19 @@ input{
 }
 .donate .donateForm input {
   height: 3.5rem;
-  border-radius: 0.5rem;
-  width:70% ;
+  border-radius: 0.8rem;
+  width: 70%;
   margin-top: 0.8rem;
   background: rgb(249, 253, 255);
   color: #000000;
   text-align: center;
+  background-color: #eaf4fc;
 }
 
 @keyframes pAnimation {
   0% {
     visibility: hidden;
     opacity: 0.1;
-    
   }
   100% {
     visibility: visible;
@@ -269,61 +248,46 @@ input{
 
 @keyframes wid {
   0% {
-    
     width: 0;
-    
   }
   100% {
     width: 22vw;
-    
   }
 }
 
-.suggestions ul{
+.suggestions ul {
   text-align: left;
-
-  
 }
-.suggestions ul li{
-  
-
+.suggestions ul li {
 }
-.suggestions ul h2{
+.suggestions ul h2 {
   font-size: 1.7vw;
   text-align: center;
   height: max-content;
   margin: auto;
-
-
 }
-.suggestions ul h3{
+.suggestions ul h3 {
   font-size: 1vw;
-  text-align:left;
-  
- 
-
+  text-align: left;
 }
 
-
-@media screen and (max-width: 1000px){
-
-  .donate_content{
-    
+@media screen and (max-width: 1000px) {
+  .donate_content {
     width: 90%;
     margin: auto;
-}
+  }
 
   .button-53 {
-    padding: .75rem 3rem;
+    padding: 0.75rem 3rem;
     font-size: 1.25rem;
   }
-  .donate_instru img{
+  .donate_instru img {
     height: 10rem;
     float: none;
     border-radius: 1rem;
   }
 
-  .donate_instru{
+  .donate_instru {
     box-shadow: 2px 2px 9px rgb(236, 236, 236);
     width: 95%;
     margin: auto;
@@ -333,26 +297,24 @@ input{
     display: block;
     margin-top: 2rem;
   }
-  .donate_content{
+  .donate_content {
     display: block;
-    
   }
-  
-  .donate_content p{
+
+  .donate_content p {
     font-size: 4vw;
-   position: relative;
-   z-index: 2;
+    position: relative;
+    z-index: 2;
   }
- 
+
   .donate {
     height: 60rem;
     margin-top: 5rem;
     width: 100%;
     display: block;
-    background: #F5F7F7;
-    
+    background: #f5f7f7;
+
     padding-top: 0.5rem;
-    
   }
   .donateForm {
     text-align: center;
@@ -360,59 +322,54 @@ input{
     box-shadow: 2px 2px 8px rgb(234, 234, 234);
     border-radius: 0.5rem;
     width: 75%;
-    height: 30rem; 
+    height: 30rem;
     margin: auto;
     margin-top: 3rem;
     min-width: 60%;
   }
 
-  .suggestions.false ul h2{
-  animation-name:pAnimation;
-  animation-fill-mode: forwards;
-  visibility: hidden;
-  animation-duration: 1s;
-  opacity: 0;
-  font-size: 5vw;
-  visibility: hidden;
-  text-align: center;
-  height: max-content;
-  margin: auto;
-  
+  .suggestions.false ul h2 {
+    animation-name: pAnimation;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+    animation-duration: 1s;
+    opacity: 0;
+    font-size: 5vw;
+    visibility: hidden;
+    text-align: center;
+    height: max-content;
+    margin: auto;
+  }
+  .suggestions {
+    position: relative;
+    z-index: 24;
+    margin-top: 3rem;
+    margin-bottom: auto;
+    background: rgb(255, 255, 255);
+    width: 80vw;
+    min-width: 80vw;
+    border-radius: 0.5rem;
+    margin: auto;
+    margin-bottom: 3rem;
+    min-height: 3rem;
+  }
+  .suggestions.false h3:focus {
+  }
 
-}
-.suggestions{
-  position: relative;
-  z-index: 24;
-  margin-top: 3rem;
-  margin-bottom: auto;
-  background: rgb(255, 255, 255);
-  width: 80vw;
-  min-width: 80vw;
-  border-radius: 0.5rem;
-  margin: auto;
-  margin-bottom: 3rem;
-  min-height: 3rem;
-}
-.suggestions.false h3:focus{
-    
-}
+  .suggestions.active {
+    display: none;
+  }
+  .suggestions.false {
+    animation-name: wid;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
+  }
 
-.suggestions.active{
-  display: none;
-
-}
-.suggestions.false{
-  animation-name: wid;
-  animation-duration: 3s;
-  animation-fill-mode: forwards;
-}
-
-.donateback h1{
-  margin: 0;
-}
-.donateback {
- width: 90%;
- height: max-content;
-}
-
+  .donateback h1 {
+    margin: 0;
+  }
+  .donateback {
+    width: 90%;
+    height: max-content;
+  }
 }
