--- a/frontend/src/css/SignUp.css
+++ b/frontend/src/css/SignUp.css
@@ -6,10 +6,9 @@
   display: flex;
   justify-content: space-between;
   box-shadow: 2px 2px 9px rgb(170, 170, 170);
+  min-height: 20rem;   
   width: 80vw;
-  height: max-content;
   border-radius: 2rem;
-  height: 38rem;   
   margin: auto;
   margin-top: 5rem;
 }
@@ -74,7 +73,7 @@
   background-color: #ffffff;
   padding: 30px;
   width: 24vw;
-  height: 23rem;
+  height: max-content;
   margin: auto;
   padding-top: 1rem;
   animation-duration: 1s;
@@ -121,6 +120,7 @@
   width: 12rem;
 }
 
+
 .form2 {
   text-decoration: none;
   background-color: #fff;
@@ -133,10 +133,12 @@
   animation-fill-mode: forwards;
   visibility: hidden;
   opacity: 0;
+  margin-top: 0rem;
+  margin-bottom: 2rem;
 }
 .form2 a{
   text-decoration: none;
-  color: rgb(121, 172, 213);
+  color: rgb(121, 172, 213);  
 }
 .form2 a:hover{
   box-shadow: none;
@@ -155,6 +157,72 @@
   height: 2rem;
   font-size: 1rem;
 }
+.uploadimage{
+  display: flex;
+  justify-content: space-between;
+  
+}
+#output{
+    margin: auto;
+    height: 4rem;
+    width: 4rem;
+
+  }
+
+
+
+#uploadf{
+  margin-right: 3.5vw;
+  
+}
+
+#uploadf::-webkit-file-upload-button {
+  display: none;
+
+}
+
+#uploadf::before {
+  content: 'Select some files';
+  display: inline-block;
+  background: linear-gradient(top, #f9f9f9, #e3e3e3);
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;  
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+  margin-top: 1rem;
+  margin-right: 1rem; 
+}
+
+#uploadf:hover::before {
+  border-color: black;
+}
+#uploadf:focus::before {
+  margin-top: 0rem
+}
+.uploadimage input:focus {
+  width: 100%;
+  padding-left: 1rem;
+  margin-top: 0rem;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #9ed2ccbb;
+  transition: 0.5s;
+  outline: none;
+  margin-top: 1rem; 
+  
+}
+
+
+#uploadf:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+
 
 @media screen and (max-width: 1000px){
   /*nav part already in landing.css*/
