--- a/frontend/src/css/Hnavbar.css
+++ b/frontend/src/css/Hnavbar.css
@@ -1,8 +1,8 @@
-.Hnavbar{
-    
+.Hnavbar {
+
     height: 4rem;
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     margin: 1rem;
     box-shadow: 2px 2px 9px rgb(231, 231, 231);
     border-radius: 1rem;
@@ -13,34 +13,33 @@
     width: 100%;
 }
 
-.li{
-    
-}
+.li {}
 
-.Hnavb{
+
+.Hnavb {
     top: 0;
     position: fixed;
     background-color: white;
     height: 5rem;
     width: 100%;
 }
+
 .logo{
     display: flex;
-    
 }
-h2{
+h2 {
     margin-left: 4rem;
     font-size: 1.5rem;
 
 }
 
-#Nlogo{
+#Nlogo {
     border-radius: 50%;
     height: 3rem;
     margin: 0.5rem;
 }
 
-#About{
+#About {
     position: absolute;
     margin-right: 5rem;
     right: 0;
@@ -49,42 +48,62 @@ h2{
 }
 
 
-.Lnav a{
+.Lnav a {
     text-decoration: none;
     color: black;
     box-shadow: none;
-   
-   
+
+
 }
-.Lnav a:hover{
+
+.Lnav a:hover {
     box-shadow: none;
 }
 
-.links.active .navli{
+.links.active .navli {
     display: none;
 }
 
 
-.prof{
+.prof {
     float: right;
     padding: 0rem;
     margin-top: 0rem;
     height: 2.5rem;
     margin-left: 2rem;
     border-radius: 50%;
-    
+
 }
-.links.active .prof{
+
+.links.active .prof {
     display: none;
 }
 
-.links.false #nonev{
+.links.false #nonev {
     display: none;
 }
-#nonev{
+
+#nonev {
     margin-top: 1rem;
     font-size: 1.4rem;
 }
-.borde{
-   
+
+.borde {}
+
+@media screen and (max-width: 1000px) {
+
+    .onlyleft {
+        width: 70vw;
+        display: flex;
+    }
+    
+   .Lnav .logo {
+       
+        margin-left: 0rem;
+        display: flex;
+    
+    }
+    .Lnav .icon{
+        margin-right: 2rem;
+    }
 }
