--- a/frontend/src/css/Request.css
+++ b/frontend/src/css/Request.css
@@ -9,8 +9,9 @@
   margin: auto;
   display: block;
   justify-content: center;
-  background: #d5f0ff;
+  background: #e9f3f8;
   padding: 0.1px;
+  border-radius: 1rem; 
 }
 
 #reqim {
@@ -53,7 +54,7 @@
   background-color: #eaf4fc;
 }
 
-.suggestions {
+/* .suggestions {
   position: relative;
   z-index: 24;
   margin-top: 3rem;
@@ -62,7 +63,7 @@
   width: 22vw;
   min-width: 20rem;
   border-radius: 0.5rem;
-}
+} */
 
 input {
   border: none;
