--- a/frontend/src/css/Dis.css
+++ b/frontend/src/css/Dis.css
@@ -33,7 +33,7 @@
 }
 .dis h2{
   margin-top: 1rem;
-  color: red;
+  color: #00008B;
 }
 
 .dise {
@@ -102,7 +102,7 @@
 
   padding: 0;
   font-size: 1.8rem;
-  color: #F49E9F;
+  color: #00008b8a;
 }
 
 .Cnavli h2 {
