--- a/frontend/src/css/Hospitals.css
+++ b/frontend/src/css/Hospitals.css
@@ -106,6 +106,8 @@
         background-repeat: no-repeat;
         background-position: top right;
         background-size: 20rem;
+        position: relative;
+        z-index: -4;
 
     }
 
