--- a/frontend/src/css/Chats.css
+++ b/frontend/src/css/Chats.css
@@ -3,9 +3,9 @@
   width: 100vw;
   background: #48b0df;
   padding: 0.1px;
-  height: 100%;
+  height: 92vh;
   
-}
+} 
 
 .chatfunc{
   background: white;
@@ -136,6 +136,10 @@ padding-right: 0px;
     position: relative;
 }
 @media screen and (max-width: 1000px) {
+  .chatmain{
+    position: relative;
+    z-index: -6;
+  }
   .chatfunc{
     width: 100vw;
     height: max-content;
