doctor appointment half done , announcement back problem ,

--- a/frontend/src/css/Annoucement.css
+++ b/frontend/src/css/Annoucement.css
@@ -114,7 +114,7 @@ background: white;
 
 }
 
-.announce .anc #anclisti li:first-child{
+.announce .anc #anclistitems li:first-child{
   background: #3657A7;
 }
 .announce .anc li:first-child{
